# quote

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/: release.yml
quote/: quote.py
quote_lines/: __init__.py  quote.py
