[metadata]
name = quote
version = attr: quote.__version__
url = https://github.com/zwimer/quote
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
license = GPL
license_files = LICENSE
description = A tiny CLI used for quoting input lines
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.8
packages = find:

[options.package_data]
claripy = py.typed

[options.entry_points]
console_scripts =
	quote = quote:cli
